refactor: поменять метод удаления элемента списка